# webscraper-ai-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  SETUP_COMPLETE.md  demo_ai_scraping.py  dev.ps1  pyproject.toml
.github/: ACTIONS_SETUP.md  copilot-instructions.md  pep-0008-short.md  pep-0008.md  prd.requirements.md
.github/docs/: python.architecture.md  python.styleguide.md
.github/rules/: git.instructions.md  numpy.instructions.md  python.instructions.md
docs/: README.md  api.md  architecture.md  performance.md  plugins.md
examples/: data_types.py  hello_world.py  step02_conditionals.py  website_collector.py
learning_steps/: README.md  step_01_setup.md  step_02_conditionals.py  step_02_control_structures.md  step_03_functions_modules.md  step_04_http_html.md  step_05_complete_project.md
src/: __init__.py  ai_enhanced_scraper.py  ai_enhanced_scraper_simple.py  categorizer.py  config.py  content_processor.py  exporters.py  intelligent_webscraper.py  interfaces.py  metadata_extractor.py  models.py  prompt_engineer.py  scraper.py  validators.py
tests/: README.md  conftest.py  run_tests.py  test_basic.py  test_categorizer.py  test_content_processor.py  test_exporters.py  test_imports.py  test_integration.py  test_metadata_extractor.py  test_models.py  test_prompt_engineer.py  test_scraper.py  test_validators.py
